--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<form action="/" method="post" enctype="multipart/form-data">
+<form action="/" method="post" enctype="multipart/form-data" accept-charset="UTF-8">
   <div>
     <label for="query_seq">Input sequence</label>
     <textarea id="query_seq" name="query_seq"></textarea>
