Add flashes and set-up related test

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,14 @@
   </head>
 
   <body>
+    <% %w[notice error warning alert info].each do |key| %>
+      <% if flash[key] %>
+        <div class="flash <%= key %>">
+          <%= flash[key] %>
+        </div>
+      <% end %>
+    <% end %>
+    
     <%= yield %>
     <%= erb :debug %>
   <body>
